Fix z-index on pre-order & landing-page

--- a/src/styles/6.components/template/page.landing-page/landing-page-header.scss
+++ b/src/styles/6.components/template/page.landing-page/landing-page-header.scss
@@ -17,7 +17,7 @@
     width: 100%;
     height: 82px;
     position: absolute;
-    z-index: 100;
+    z-index: $z-base;
     bottom: -10px;
 
     @include media-query($small) {
