--- a/src/styles/6.components/template/page.pre-order/pre-order-cap.scss
+++ b/src/styles/6.components/template/page.pre-order/pre-order-cap.scss
@@ -32,7 +32,7 @@
     left: 50%;
     bottom: 0;
     transform: translateX(-50%);
-    z-index: 1;
+    z-index: $z-base;
 
     @include media-query($large-down) {
       bottom: -15px;
