--- a/src/styles/6.components/template/page.pre-order/pre-order-last-bottle.scss
+++ b/src/styles/6.components/template/page.pre-order/pre-order-last-bottle.scss
@@ -19,7 +19,7 @@
 
   &__content {
     position: relative;
-    z-index: 1;
+    z-index: $z-base;
 
     @include media-query($medium-down) {
       margin-top: 20px;
